# pocket_ml

./: .gitignore  .pypirc  LICENSE  README.md  pyproject.toml  setup.py
pocket_ml/: __init__.py  model.py  visualization.py
pocket_ml/algorithms/: __init__.py
pocket_ml/algorithms/classification/: classifier.py
pocket_ml/algorithms/regression/: regressor.py
pocket_ml/preprocessing/: __init__.py  data_preprocessor.py
pocket_ml/visualization/: __init__.py  visualizer.py
