[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pocket_ml"
version = "0.1.0"
authors = [
    {name = "Raghul", email = "raghulchandramouli@gmail.com"}
]
description = "A simplified machine learning library for easy ML workflows"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["machine learning", "data science", "classification", "visualization"]
dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.2.0",
    "scikit-learn>=0.24.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0"
]

[project.urls]
Documentation = "https://pocket_ml.readthedocs.io"
Repository = "https://github.com/raghulchandramouli/pocket_ml"
Bug_Tracker = "https://github.com/raghulchandramouli/pocket_ml/issues"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["pocket_ml"]

[tool.setuptools.package-data]
pocket_ml = ["LICENSE", "README.md"]